# tweetynet

./: .all-contributorsrc  .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  noxfile.py  pyproject.toml  setup.py  snakemake  spec-file.txt
article/: README.md  pyproject.toml
article/configs/: bird0_config.ini  bird2_config.ini  config_2018-10-09_bl26lb16_GPU1.ini  config_BirdsongRecognition_bird05.ini  config_BirdsongRecognition_bird06.ini  config_BirdsongRecognition_bird07.ini  config_BirdsongRecognition_bird09.ini
article/data/BirdsongRecognition/Bird0/: Wave_prep_210528_224944.csv
article/data/BirdsongRecognition/Bird4/: Wave_prep_210528_224959.csv
article/data/BirdsongRecognition/Bird7/: Wave_prep_210527_213331.csv
article/data/BirdsongRecognition/Bird9/: Wave_prep_210527_213350.csv
article/data/BirdsongRecognition/annotation_converted/: Bird0_templates.mat  Bird7_annotation.mat  Bird7_templates.mat  Bird9_templates.mat
article/data/BirdsongRecognition/annotation_tweetynet/: tweetynet-Bird0_annotation.mat  tweetynet-Bird4_annotation.mat  tweetynet-Bird7_templates.mat  tweetynet-Bird9_templates.mat
article/data/Canaries/llb11/: annotated_prep_200608_221003_linux_npz.csv
article/data/Canaries/llb16/: annotated_prep_200613_135259_linux2_npz.csv
article/data/Canaries/llb3/: annotated_prep_200605_103353_linux_npz.csv
article/data/annotation-figure/: gy6or6_baseline_220312_0836.3.rec
article/data/configs/: segment_params.ini
article/data/configs/demo-gif/: gy60r6_predict_032612.toml  llb3_predict_first_submission_longtrain.toml  or60yw70_predict_093012.toml
article/data/demo-gif/: llb3_predict_first_submission_longtrain-song-004-1.63-3.03.ai  network.ai  tweetynet-GIF-2022-03-13.fla  tweetynet-GIF-2022-03-13.swf
article/doc/: elife.cls  tweetynet-paper-revision.tex  tweetynet-paper.tex  tweetynet.bib
article/doc/figures/Supplementaries/: suppfig_rare_events_test_hidden_16_64.ai  suppfig_tweetynet_tensor_shapes_example.ai
article/doc/figures/mainfig_across_individuals_species/: fig4-data1.csv  fig4-data2.csv
article/doc/figures/mainfig_bf_behavior/: fig6-data1.csv  fig6-data2.csv  syllable-error-rate-across-days.eps  transition-probabilities-across-days.eps
article/doc/figures/mainfig_postprocess_error_rates/: effect-of-post-processing-and-hyperparams.ai  fig5-data1.csv
article/doc/figures/mainfig_tweetynet_v_svm/: fig3-data1.csv  svm-v-tweetynet-results.eps
article/src/article/: __init__.py
article/src/scripts/: Frame_error_in_rare_events.ipynb  Model_output_matrix_examples.ipynb  Table_summarizing_models_values.ipynb  fig-across-individuals-species.ipynb  fig-post-process-error-rates.ipynb  generate_figure_source_data.py  plot-for-promo.ipynb
(+1054 files in other folders)
