[project]
name = "tweetynet"
description = "neural network that segments and labels birdsong and other animal vocalizations"
version = "0.7.0"
authors = [
    {name = "Yarden Cohen", email = "yardencsgithub@users.noreply.github.com"},
    {name = "David Nicholson", email = "nickledave@users.noreply.github.com"},
]
readme = "README.md"
classifiers = [
        'License :: OSI Approved :: BSD License',
        'Development Status :: 5 - Production/Stable',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: Implementation :: CPython'
]
requires-python = ">=3.7"
license = {file = "LICENSE"}
dependencies = [
    "torch>=1.7.1",
    "vak>=0.4.0"
]
[project.optional-dependencies]
test = [
    "pytest >=2.7.3",
    "pytest-cov",
]
dev = [
    "flit",
    "ipython>=7.30.1",
    "nox",
]

[project.urls]
Source = 'https://github.com/yardencsGitHub/tweetynet'

[project.entry-points."vak.models"]
'TweetyNetModel' = 'tweetynet:TweetyNetModel'

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
exclude = [
    "doc/notebooks",
    "article/data",
    "article/results",
    "article/doc"
]
