[project]
name = "tweetynet-article"
version = "0.1.0"
description = "code to reproduce TweetyNet article in eLife"
authors = [
    {name = "Yarden Cohen", email = "yardencsgithub@users.noreply.github.com"},
    {name = "David Nicholson", email = "nickledave@users.noreply.github.com"},
]
requires-python = ">=3.7"
license = {file = "../LICENSE"}
classifiers = [
        'License :: OSI Approved :: BSD License',
        'Development Status :: 5 - Production/Stable',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: Implementation :: CPython',
        # hack to keep from putting this on PyPI
        'Private :: Do Not Upload'
]
dependencies = [
    "tweetynet>=0.6.0",
    "pyprojroot>=0.2.0",
    "hybrid-vocal-classifier>=0.3.1",
    "seaborn>=0.11.2",
    "jupyterlab>=3.2.5",
    "scikit-learn>=1.0.1"
]

[project.urls]
Source = 'https://github.com/yardencsGitHub/tweetynet'

[tool.flit.module]
name = "article"

[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"
